#923: penalty takers enhancements. HT sorting for now
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10204 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -388,6 +388,8 @@ module.MatchOrderInterface.Specialties.desc=Show player specialties
 module.MatchOrderInterface.ShowFaces.desc=Show player faces instead of the shirt for future and old Lineups
 module.MatchOrderInterface.StayOnPage.desc=Stay on the match order page after saving
 module.MatchOrderInterface.SwapPositions.desc=Add a link to swap players from left to right
+module.MatchOrderInterface.FixPenaltyTakers.desc=Change penalty takers list behavior from 'replace player' to 'swap places'
+module.MatchOrderInterface.FillPenaltyTakers.desc=Add a button to fill the penalty takers list with the current squad
 module.MatchSimulator.desc=Adds a match simulator to the match order interface.
 module.MatchSimulator.RatingsOnTop.desc=Keeps rating prediction on top
 module.MatchSimulator.RatingsBelow.desc=Displays prediction below
@@ -700,6 +702,7 @@ matchOrder.cloneAsSwap=Clone and convert to swap
 matchOrder.cloneAsSwap.abbr=Sw
 matchOrder.cloneAsChange=Clone and convert to behavioral change
 matchOrder.cloneAsChange.abbr=B
+matchOrder.fillPenaltyTakers=Fill penalty takers
 
 #Skills
 Playmaking=Playmaking
