#923: added a button to clear the list, HO sorting, various options. Weird FF glitch left.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10209 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -389,7 +389,10 @@ module.MatchOrderInterface.ShowFaces.desc=Show player faces instead of the shirt
 module.MatchOrderInterface.StayOnPage.desc=Stay on the match order page after saving
 module.MatchOrderInterface.SwapPositions.desc=Add a link to swap players from left to right
 module.MatchOrderInterface.FixPenaltyTakers.desc=Change penalty takers list behavior from 'replace player' to 'swap places'
-module.MatchOrderInterface.FillPenaltyTakers.desc=Add a button to fill the penalty takers list with the current squad
+module.MatchOrderInterface.AddPenaltyTakerButtons.desc=Add buttons to clear the penalty takers list and fill it with the current squad
+module.MatchOrderInterface.DontSortPenaltyTakers.desc=Sort by the player list instead of HO formula 
+module.MatchOrderInterface.PrioritizeSP.desc=Add set pieces taker first
+module.MatchOrderInterface.ClearPenaltyTakersFirst.desc=Clear the list before filling
 module.MatchSimulator.desc=Adds a match simulator to the match order interface.
 module.MatchSimulator.RatingsOnTop.desc=Keeps rating prediction on top
 module.MatchSimulator.RatingsBelow.desc=Displays prediction below
@@ -703,6 +706,7 @@ matchOrder.cloneAsSwap.abbr=Sw
 matchOrder.cloneAsChange=Clone and convert to behavioral change
 matchOrder.cloneAsChange.abbr=B
 matchOrder.fillPenaltyTakers=Fill penalty takers
+matchOrder.clearPenaltyTakers=Clear the list
 
 #Skills
 Playmaking=Playmaking
