#923: another option + releasenotes.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10212 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -390,6 +390,7 @@ module.MatchOrderInterface.StayOnPage.desc=Stay on the match order page after sa
 module.MatchOrderInterface.SwapPositions.desc=Add a link to swap players from left to right
 module.MatchOrderInterface.FixPenaltyTakers.desc=Change penalty takers list behavior from 'replace player' to 'swap places'
 module.MatchOrderInterface.AddPenaltyTakerButtons.desc=Add buttons to clear the penalty takers list and fill it with the current squad
+module.MatchOrderInterface.UseSubsForPenalties.desc=Also add players on the bench
 module.MatchOrderInterface.DontSortPenaltyTakers.desc=Sort by the player list instead of HO formula 
 module.MatchOrderInterface.PrioritizeSP.desc=Add set pieces taker first
 module.MatchOrderInterface.ClearPenaltyTakersFirst.desc=Clear the list before filling
