--- a/Info.plist
+++ b/Info.plist
@@ -46,6 +46,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/lib/sha1.js</string>
 				<string>content/lib/jquery.js</string>
 				<string>content/lib/PluralForm.js</string>
+				<string>content/lib/js-yaml.min.js</string>
 
 				<!-- utilities -->
 				<string>content/util/api.js</string>
