css.js seperated from misc.js
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10235 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
 			"content/util/array.js",
 			"content/util/copy-button.js",
 			"content/util/currency.js",
+			"content/util/css.js",
 			"content/util/dom.js",
 			"content/util/ht-ml.js",
 			"content/util/id.js",
