--- a/Info.plist
+++ b/Info.plist
@@ -53,6 +53,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/util/array.js</string>
 				<string>content/util/copy-button.js</string>
 				<string>content/util/currency.js</string>
+				<string>content/util/css.js</string>
 				<string>content/util/dom.js</string>
 				<string>content/util/ht-ml.js</string>
 				<string>content/util/id.js</string>
