--- a/Info.plist
+++ b/Info.plist
@@ -61,6 +61,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/util/layout.js</string>
 				<string>content/util/links-box.js</string>
 				<string>content/util/local-store.js</string>
+				<string>content/util/load.js</string>
 				<string>content/util/log.js</string>
 				<string>content/util/match-view.js</string>
 				<string>content/util/misc.js</string>
