cookies.js seperated from misc.js
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10239 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
 			//<!-- utilities -->
 			"content/util/api.js",
 			"content/util/array.js",
+			"content/util/cookies.js",
 			"content/util/copy-button.js",
 			"content/util/currency.js",
 			"content/util/css.js",
