YML lib changed to a faster one. Additional release-notes.yml cleanup.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10258 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -42,7 +42,7 @@
 			"content/lib/oauth.js",
 			"content/lib/sha1.js",
 			"content/lib/PluralForm.js",
-			"content/lib/js-yaml.js",
+			"content/lib/yaml.js",
 			
 			//<!-- core modules -->
 			"content/redirections.js",
